--- a/dad-jokes/index.html
+++ b/dad-jokes/index.html
@@ -1,17 +1,37 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Dad Jokes</title>
   </head>
   <body>
-    <div class="container">
-      <h3>Don't Laugh Challenge</h3>
-      <div id="joke" class="joke">// Joke goes here</div>
-      <button id="jokeBtn" class="btn">Get Another Joke</button>
-    </div>
+    <main>
+      <h1>Random Quote Generator</h1>
+      <div id="quoteContainer">
+        <p id="quote">
+          I didn’t fail the test. I just found 100 ways to do it wrong.
+        </p>
+        <p id="author">Benjamin Franklin</p>
+      </div>
+      <button id="btn"><i class="fa-solid fa-rotate-right"></i></button>
+    </main>
+    <footer>
+      <div class="content">
+        <p>
+          Made with <i class="fa-solid fa-heart"></i> by
+          <a>
+            Hoàng
+          </a>
+        </p>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
