--- a/faq-collapse/index.html
+++ b/faq-collapse/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>FAQ</title>
   </head>
@@ -77,6 +80,14 @@
         </button>
       </div>
     </div>
+    <footer>
+      <div class="content">
+        <p>
+          Made with <i class="fa-solid fa-heart"></i> by
+          <a>Hoàng</a>   
+        </p>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
