--- a/animated-navigation/index.html
+++ b/animated-navigation/index.html
@@ -11,6 +11,7 @@
     <title>Animated Navigation</title>
   </head>
   <body>
+      <h1>Animated Navigation</h1>
     <nav class="active" id="nav">
       <ul>
         <li><a href="#">Home</a></li>
