--- a/incrementing-counter/index.html
+++ b/incrementing-counter/index.html
@@ -16,18 +16,18 @@
         <h1>Increment Counter</h1>
       </div>
 
-      <div class="countersGroup">
-        <div class="counterContainer">
+      <div class="counter-group">
+        <div class="counter-container">
           <i class="fab fa-twitter fa-3x"></i>
           <div class="counter" data-target="2000"></div>
           <p>Twitter Followers</p>
         </div>
-        <div class="counterContainer">
+        <div class="counter-container">
           <i class="fab fa-youtube fa-3x"></i>
           <div class="counter" data-target="50000"></div>
           <p>YouTube Subscribers</p>
         </div>
-        <div class="counterContainer">
+        <div class="counter-container">
           <i class="fab fa-facebook fa-3x"></i>
           <div class="counter" data-target="9999"></div>
           <p>Facebook Fans</p>
@@ -37,7 +37,7 @@
       <footer>
         <div class="content">
           <p>
-            Made with <i class="fa-solid fa-heart"></i> by
+            Made with <i class="fa-solid fa-heart"></i> 
             <a
             >
               by Hoàng
