--- a/drink-water/index.html
+++ b/drink-water/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <title>Drink Water</title>
   </head>
   <body>
@@ -31,7 +35,15 @@
       <div class="cup cup-small">250 ml</div>
       <div class="cup cup-small">250 ml</div>
     </div>
-
+    <footer>
+      <div class="content">
+        <p>
+          Made with <i class="fa-solid fa-heart"></i> by
+          <a></a> Hoàng
+        </p>
+      </div>
+    </footer>
+    
     <script src="script.js"></script>
   </body>
 </html>
