push ngày thứ n

--- a/expanding-cards/index.html
+++ b/expanding-cards/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <title>Expanding Cards</title>
   </head>
   <body>
@@ -24,6 +28,11 @@
         <h3>Mountains - Clouds</h3>
       </div>
     </div>
+      <footer>
+        <div class="content">
+          <p>Made with <i class="fa-solid fa-heart"></i> by Hoàng</p>
+        </div>
+      </footer>
     <script src="script.js"></script>
   </body>
 </html>
