--- a/blurry-loading/index.html
+++ b/blurry-loading/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+  />
     <title>Blurry Loading</title>
   </head>
   <body>
     <section class="bg"></section>
     <div class="loading-text">0%</div>
-
+    <footer>
+      <div class="content">
+        <p>Made with  <i class="fa solid fa-heart"></i> by Hoàng</p>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
