--- a/toast-notification/index.html
+++ b/toast-notification/index.html
@@ -4,16 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <title>Toast Notification</title>
   </head>
   <body>
+    <header>
+      <h3>
+        Toast Notification
+      </h3>
+    </header>
     <div class="notifications"></div>
     <div class="buttons">
-        <button id="success">Success</button>
-        <button id="error">Error</button>
-        <button id="warning">Warning</button>
-        <button id="info">Info</button>
+        <button id="success" style="color: #0abf30">Success</button>
+        <button id="error" style="color: #f24d4c">Error</button>
+        <button id="warning" style="color: #e9bd0c">Warning</button>
+        <button id="info" style="color: #3498db">Info</button>
     </div>
+    <footer>
+      <div class="content">
+        <p>
+          Made with <i class="fa-solid fa-heart"></i> by
+          <a href="">Hoàng</div>
+        </p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
+
+
+
