--- a/double-click-heart/index.html
+++ b/double-click-heart/index.html
@@ -16,6 +16,10 @@
 
     <div class="loveMe"></div>
 
+    <footer>
+      <p>© 2024 by Hoàng. All rights reserved.</p>
+    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
