--- a/auto-text-effect/index.html
+++ b/auto-text-effect/index.html
@@ -4,15 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <title>Auto Text Effect</title>
   </head>
   <body>
-    <h1 id="text">Starting...</h1>
+    <header>
+      <h1>Auto Text Effect</h1>
+    </header>
 
-    <div>
-      <label for="speed">Speed:</label>
-      <input type="number" name="speed" id="speed" value="1" min="1" max="10" step="1">
-    </div>
+    <main>
+      <h2 id="text">Starting...</h2>
+
+      <div class="speed-control">
+        <label for="speed">Speed:</label>
+        <input type="number" name="speed" id="speed" value="1" min="1" max="10" step="1">
+      </div>
+    </main>
+
+    <footer>
+      <p>
+        Made with <i class="fa-solid fa-heart"></i> by Hoàng
+      </p>
+    </footer>
 
     <script src="script.js"></script>
   </body>
