--- a/good-cheap-fast/index.html
+++ b/good-cheap-fast/index.html
@@ -7,30 +7,40 @@
     <title>Good, Cheap, Fast</title>
   </head>
   <body>
-    <h2>How do you want your project to be?</h2>
-    <div class="toggle-container">
-      <input type="checkbox" id="good" class="toggle">
-      <label for="good" class="label">
-        <div class="ball"></div>
-      </label>
-      <span>Good</span>
-    </div>
+    <main>
+      <h2>How do you want your project to be?</h2>
+      <p class="subtitle">
+        Your project can be any two of these but never all three
+      </p>
+      <div class="toggle-container">
+        <input type="checkbox" id="good" class="toggle">
+        <label for="good" class="label">
+          <div class="ball"></div>
+        </label>
+        <span>Good</span>
+      </div>
 
-    <div class="toggle-container">
-      <input type="checkbox" id="cheap" class="toggle">
-      <label for="cheap" class="label">
-        <div class="ball"></div>
-      </label>
-      <span>Cheap</span>
-    </div>
+      <div class="toggle-container">
+        <input type="checkbox" id="cheap" class="toggle">
+        <label for="cheap" class="label">
+          <div class="ball"></div>
+        </label>
+        <span>Cheap</span>
+      </div>
 
-    <div class="toggle-container">
-      <input type="checkbox" id="fast" class="toggle">
-      <label for="fast" class="label">
-        <div class="ball"></div>
-      </label>
-      <span>Fast</span>
-    </div>
+      <div class="toggle-container">
+        <input type="checkbox" id="fast" class="toggle">
+        <label for="fast" class="label">
+          <div class="ball"></div>
+        </label>
+        <span>Fast</span>
+      </div>
+    </main>
+
+    <footer>
+      <p>© 2024 by Hoàng. All rights reserved.</p>
+    </footer>
+    
     <script src="script.js"></script>
   </body>
 </html>
