--- a/hoverboard/index.html
+++ b/hoverboard/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Hoverboard</title>
-  </head>
-  <body>
-    <div class="container" id="container"></div>
-    <script src="script.js"></script>
-  </body>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Hoverboard</title>
+</head>
+<body>
+  <header>
+    <h2>Hoverboard</h2>
+  </header>
+  <div class="container" id="container"></div>
+  <footer>
+    <p>&copy; 2024 by Hoàng. All rights reserved.</p>
+  </footer>
+  <script src="script.js"></script>
+</body>
 </html>
