--- a/animated-countdown/index.html
+++ b/animated-countdown/index.html
@@ -23,6 +23,10 @@
         <span>Replay</span>
       </button>
     </div>
+    <footer>
+      <p>
+        &copy; 2021 <a href="
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
