--- a/animated-countdown/index.html
+++ b/animated-countdown/index.html
@@ -24,9 +24,9 @@
       </button>
     </div>
     <footer>
-      <p>
-        &copy; 2021 <a href="
+      <p> Animated Countdown by Hoàng</p>
     </footer>
+  
     <script src="script.js"></script>
   </body>
 </html>
