--- a/image-carousel/index.html
+++ b/image-carousel/index.html
@@ -41,10 +41,13 @@
     </div>
 
     <div class="button">
-        <button class="prev"><i class="fa-solid fa-arrow-left"></i></button>
-        <button class="next"><i class="fa-solid fa-arrow-right"></i></button>
+        <button class="prev"> < </button>
+        <button class="next"> > </button>
     </div>
 </div>
+<footer>
+  <p>&copy; 2024 by Hoàng. All rights reserved.</p>
+</footer>
 <script src="script.js"></script>
 </body>
 </html>
