done pokedex my version

--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -9,8 +9,15 @@
   <body>
     <h1>Pokedex</h1>
     <div class="poke-container" id="poke-container"></div>
-
-    <!-- Design inspired by this Dribbble shot: https://dribbble.com/shots/5611109--Pokemon -->
+    <div id="pagination" class="pagination"></div>
+    <footer>
+      <p>
+        Data from
+        <a href="https://pokeapi.co/" target="_blank" rel="noopener noreferrer"
+          >PokeAPI</a
+        >
+      </p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
